<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.yoshinobu.calendar.MonthFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/header"
            >
            <Button android:id="@+id/front"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/left"
                android:textSize="24sp"
                />
            <TextView
                android:id="@+id/year_month"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:textSize="24sp"
                android:gravity="center"
                android:text="@string/yearmonth"/>

            <Button android:id="@+id/next"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/right"
                android:textSize="24sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:gravity="center"
            android:orientation="horizontal"
            android:id="@+id/week"
            >
            <TextView
                android:id="@+id/week0"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="24sp"
                android:gravity="center"
                android:text="@string/week0"/>
            <TextView
                android:id="@+id/week1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="24sp"
                android:gravity="center"
                android:text="@string/week1"/>
            <TextView
                android:id="@+id/week2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="24sp"
                android:gravity="center"
                android:text="@string/week2"/>
            <TextView
                android:id="@+id/week3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="24sp"
                android:gravity="center"
                android:text="@string/week3"/>
            <TextView
                android:id="@+id/week4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="24sp"
                android:gravity="center"
                android:text="@string/week4"/>
            <TextView
                android:id="@+id/week5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="24sp"
                android:gravity="center"
                android:text="@string/week5"/>
            <TextView
                android:id="@+id/week6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="24sp"
                android:gravity="center"
                android:text="@string/week6"/>

        </LinearLayout>
        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            >
            <LinearLayout
                android:id="@+id/day"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@color/black">
            </LinearLayout>

        </ScrollView>
    </LinearLayout>

</FrameLayout>
