<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.yoshinobu.calendar.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:id="@+id/footer"
        >
        <Button android:id="@+id/settingBtn"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn1"
            android:textSize="8sp"
            />
        <Button android:id="@+id/monthBtn"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn2"
            android:textSize="8sp"
            />
        <Button android:id="@+id/weekBtn"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn3"
            android:textSize="8sp"
            />
        <Button android:id="@+id/dayBtn"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn4"
            android:textSize="8sp"
            />
        <Button android:id="@+id/registBtn"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn5"
            android:textSize="8sp"
            />
    </LinearLayout>
    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_above="@id/footer"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"/>

</RelativeLayout>
